<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/b"
    tools:context=".PersonalInfoModifyActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/viewandmodify"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/lastname"
        android:layout_below="@+id/lastname"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/username"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/firstname"
        android:layout_below="@+id/firstname"
        android:ems="10" />
    <!-- <EditText
        android:id="@+id/username"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/firstname"
        android:layout_below="@+id/firstname"
        android:ems="10" /> -->

    <EditText
        android:id="@+id/email"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:ems="10" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email"
        android:layout_alignBottom="@+id/email"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/Email" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/password1"
        android:layout_below="@+id/password1"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/ProfessionSpinner"
        android:layout_below="@+id/textView6"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password2"
        android:layout_alignBottom="@+id/password2"
        android:layout_alignLeft="@+id/textView7"
        android:text="@string/password2" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password2"
        android:layout_alignRight="@+id/password2"
        android:layout_below="@+id/password2" >

        <RadioButton
            android:id="@+id/female"
            android:layout_width="130dp"
            android:layout_height="32dp"
            android:layout_marginRight="14dp"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/male"
            android:layout_width="130dp"
            android:layout_height="32dp"
            android:text="@string/male" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignTop="@+id/radioSex"
        android:layout_marginTop="17dp"
        android:text="@string/Gender" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password2"
        android:layout_alignLeft="@+id/textView6"
        android:text="@string/password1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/email"
        android:text="@string/dateofbirth" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ProfessionSpinner"
        android:layout_alignLeft="@+id/textView10"
        android:text="@string/profession" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/email"
        android:ems="10"
        android:inputType="date" />

    <Spinner
        android:id="@+id/ProfessionSpinner"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/dob"
        android:layout_below="@+id/textView10"
        android:spinnerMode="dropdown"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/firstname"
        android:layout_alignBottom="@+id/firstname"
        android:layout_alignLeft="@+id/TextView01"
        android:text="@string/FirstName" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/radioSex"
        android:onClick="back_to_login"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/sbumit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancel"
        android:layout_alignBottom="@+id/cancel"
        android:layout_alignRight="@+id/textView8"
        android:layout_marginRight="16dp"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/cancel"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginTop="38dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/firstname"
        android:layout_alignRight="@+id/textView7"
        android:text="@string/LastName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_marginRight="23dp"
        android:layout_toLeftOf="@+id/dob"
        android:text="@string/dateformat" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/username"
        android:layout_alignRight="@+id/textView6"
        android:text="@string/UserName" />

</RelativeLayout>
<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PersonalInfoModifyActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

</RelativeLayout> -->