<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PhysicalInfoModifyActivity" 
    android:background="@drawable/b"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/viewandmodify"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_centerVertical="true"
        android:text="@string/height" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="34dp"
        android:text="@string/disease" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="29dp"
        android:text="@string/deficiency" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="32dp"
        android:text="@string/submit" />

    <Spinner
        android:id="@+id/deficiency"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/Spinner01"
        android:spinnerMode="dropdown"
        android:visibility="visible" />

    <Spinner
        android:id="@+id/Spinner01"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_above="@+id/textView8"
        android:layout_alignLeft="@+id/height"
        android:spinnerMode="dropdown"
        android:visibility="visible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/deficiency"
        android:layout_marginRight="16dp"
        android:text="@string/cancel" />

    <Spinner
        android:id="@+id/weight"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_above="@+id/height"
        android:layout_alignLeft="@+id/age"
        android:layout_marginBottom="15dp"
        android:spinnerMode="dropdown"
        android:visibility="visible" />

    <Spinner
        android:id="@+id/height"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_above="@+id/textView7"
        android:layout_alignLeft="@+id/weight"
        android:spinnerMode="dropdown"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/weight"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/weight" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weight"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="22dp"
        android:text="@string/age" />

    <Spinner
        android:id="@+id/age"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/button1"
        android:spinnerMode="dropdown"
        android:visibility="visible" />

</RelativeLayout>
