<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlanActivity" 
    android:background="@drawable/b"
    >

    <Button
        android:id="@+id/button2"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:onClick="viewtrip"
        android:text="@string/CurrentPlan" />

    <Button
        android:id="@+id/button1"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="20dp"
        android:onClick="viewtrip"
        android:text="@string/PlanHistory" />

    <Button
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="19dp"
        android:onClick="viewtrip"
        android:text="@string/Export_to_calender" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/healthy_me" 
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>